--- a/app/src/main/res/layout/layout_reservation_pay.xml
+++ b/app/src/main/res/layout/layout_reservation_pay.xml
@@ -3,8 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_marginTop="15dp">
+    android:orientation="vertical">
 
     <View
         android:layout_width="match_parent"
