--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -112,14 +112,14 @@
                 <LinearLayout
                     android:layout_width="50dp"
                     android:layout_height="46dp"
-                    android:layout_weight="0.7"
-                    android:background="@drawable/comp_selectbox_l">
+                    android:layout_weight="1.5"
+                    android:background="@drawable/style_bordcolor_status">
                     <Spinner
                         android:id="@+id/phone_num_1"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="46dp"
                         android:textSize="15dp"
-                        android:background="@android:color/transparent"
+                        android:padding="0dp"
                         android:spinnerMode="dropdown" />
                 </LinearLayout>
 
