--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -108,7 +108,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="75dp"
                     android:visibility="visible"
-                    android:scaleType="fitXY">
+                    android:scaleType="centerCrop">
                 </android.support.v4.view.ViewPager>
             </LinearLayout>
 
