--- a/app/src/main/res/layout/layout_keyword_item.xml
+++ b/app/src/main/res/layout/layout_keyword_item.xml
@@ -31,6 +31,8 @@
             android:layout_below="@+id/iv_image"
             android:paddingLeft="8dp"
             android:textSize="12dp"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:background="@color/white"
             android:textColor="@color/blacktxt"
             tools:text="서울" />
