--- a/app/src/main/res/layout/layout_stay_item.xml
+++ b/app/src/main/res/layout/layout_stay_item.xml
@@ -21,11 +21,14 @@
         android:layout_height="160dp">
 
         <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="160dp"
+            android:background="@drawable/img_holder"/>
+        <ImageView
             android:id="@+id/iv_img"
             android:layout_width="match_parent"
             android:layout_height="160dp"
-            android:scaleType="fitXY"
-            android:background="@color/holder_c"/>
+            android:scaleType="fitXY"/>
 
         <ImageView
             android:id="@+id/iv_favorite"
