--- a/app/src/main/res/layout/layout_mypage_join.xml
+++ b/app/src/main/res/layout/layout_mypage_join.xml
@@ -108,6 +108,7 @@
                         android:textColor="@color/blacktxt"/>
 
                     <RelativeLayout
+                        android:id="@+id/layout_discount_money"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="15dp">
@@ -203,6 +204,7 @@
                             android:textColor="@color/blacktxt"/>
 
                         <RelativeLayout
+                            android:id="@+id/layout_disable_coupon"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="15dp">
