--- a/app/src/main/res/layout/fragment_a_result.xml
+++ b/app/src/main/res/layout/fragment_a_result.xml
@@ -20,8 +20,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="20dp"
-        style="?android:attr/borderlessButtonStyle"/>
+        android:layout_marginBottom="20dp" />
 
     <RelativeLayout
         android:id="@+id/wrapper"
