--- a/app/src/main/res/layout/fragment_h_result.xml
+++ b/app/src/main/res/layout/fragment_h_result.xml
@@ -74,8 +74,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="22dp"
-        style="?android:attr/borderlessButtonStyle"/>
+        android:layout_marginBottom="22dp" />
 
     <RelativeLayout
         android:id="@+id/wrapper"
