--- a/app/src/main/res/layout/layout_search_empty.xml
+++ b/app/src/main/res/layout/layout_search_empty.xml
@@ -7,8 +7,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fillViewport="true"
-        android:layout_marginBottom="40dp">
+        android:fillViewport="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -117,7 +116,6 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:layout_below="@+id/layout_filter"
-                android:layout_above="@id/popular_keyword"
                 android:orientation="vertical">
 
                 <ImageView
@@ -149,10 +147,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/empty_image"
+                android:layout_marginTop="50dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginBottom="85dp">
+                android:layout_marginBottom="35dp">
 
                 <TextView
                     android:layout_width="match_parent"
