--- a/app/src/main/res/layout/dialog_share.xml
+++ b/app/src/main/res/layout/dialog_share.xml
@@ -118,7 +118,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
                 android:gravity="center"
-                android:text="닫기"
+                android:text="확인"
                 android:layout_gravity="center"
                 android:background="@color/purple"
                 android:textColor="#ffffff" />
