--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -119,7 +119,8 @@
 			android:gravity="right"
 			android:layout_centerVertical="true"
 			android:layout_alignParentRight="true"
-			android:layout_marginRight="16dp"/>
+			android:layout_marginRight="16dp"
+			android:visibility="gone"/>
 
 		<View
 			android:layout_width="match_parent"
