--- a/app/src/main/res/layout/dialog_full.xml
+++ b/app/src/main/res/layout/dialog_full.xml
@@ -21,7 +21,7 @@
                 android:textSize="24dp"
                 android:layout_marginLeft="43dp"
                 android:layout_marginRight="42dp"
-                android:layout_marginTop="67dp"
+                android:layout_marginTop="43dp"
                 android:letterSpacing="-0.02"
                 android:gravity="center_horizontal"
                 android:text="호텔나우 앱에서 사용하는 권한을 안내해드립니다"
@@ -70,7 +70,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="40dp"
                         android:layout_marginRight="40dp"
-                        android:layout_marginTop="29dp"
+                        android:layout_marginTop="26dp"
                         android:textSize="16dp"
                         android:text="필수적 접근 권한"
                         android:textColor="@color/blacktxt"/>
@@ -79,7 +79,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_marginTop="13dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginLeft="40dp"
                         android:layout_marginRight="40dp">
 
@@ -117,7 +117,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="40dp"
                         android:layout_marginRight="40dp"
-                        android:layout_marginTop="29dp"
+                        android:layout_marginTop="26dp"
                         android:textSize="16dp"
                         android:text="선택적 접근 권한"
                         android:textColor="@color/blacktxt"/>
@@ -126,7 +126,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:layout_marginTop="13dp"
+                        android:layout_marginTop="10dp"
                         android:layout_marginLeft="40dp"
                         android:layout_marginRight="40dp">
 
@@ -159,6 +159,43 @@
                         </LinearLayout>
                     </LinearLayout>
 
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginLeft="40dp"
+                        android:layout_marginRight="40dp">
+
+                        <ImageView
+                            android:layout_width="28dp"
+                            android:layout_height="28dp"
+                            android:layout_gravity="center"
+                            android:background="@drawable/ico_appnoti_notice"/>
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="vertical"
+                            android:layout_marginLeft="22dp">
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="앱 알림"
+                                android:textSize="16dp"
+                                android:textColor="@color/blacktxt" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="마케팅 정보, 리뷰 요청"
+                                android:textSize="15dp"
+                                android:layout_marginTop="6dp"
+                                android:textColor="@color/termtext" />
+                        </LinearLayout>
+                    </LinearLayout>
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -167,7 +204,7 @@
                         android:text="해당 기능을 이용하실 때 동의를 받으며, 허용하지 않으셔도 서비스 이용이 가능합니다."
                         android:layout_marginLeft="40dp"
                         android:layout_marginRight="40dp"
-                        android:layout_marginTop="20dp"
+                        android:layout_marginTop="17dp"
                         android:letterSpacing="-0.01"
                         android:lineSpacingExtra="10dp"/>
 
