--- a/app/src/main/res/layout/layout_reservation_price.xml
+++ b/app/src/main/res/layout/layout_reservation_price.xml
@@ -38,6 +38,7 @@
         android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/real_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/blacktxt"
