--- a/app/src/main/res/layout/activity_all_room.xml
+++ b/app/src/main/res/layout/activity_all_room.xml
@@ -98,11 +98,27 @@
         android:fillViewport="true">
 
         <LinearLayout
-            android:id="@+id/room_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"></LinearLayout>
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/tv_review_count"
+                android:layout_width="match_parent"
+                android:layout_height="34dp"
+                android:textSize="13dp"
+                android:paddingLeft="20dp"
+                tools:text="총 12개의 객실이 있습니다."
+                android:gravity="center_vertical"
+                android:textColor="@color/detail_more_color"
+                android:background="@color/footerview"/>
+
+            <LinearLayout
+                android:id="@+id/room_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"></LinearLayout>
+        </LinearLayout>
     </ScrollView>
 
 </RelativeLayout>
