--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -62,6 +62,7 @@
 			android:layout_centerVertical="true"
 			android:layout_marginLeft="16dp"
 			android:textSize="13dp"
+			android:visibility="gone"
 			android:textColor="@color/termtext"/>
 
 		<RelativeLayout
@@ -71,6 +72,7 @@
 			android:layout_marginLeft="15dp"
 			android:layout_centerVertical="true"
 			android:layout_toRightOf="@+id/tv_date_title"
+			android:visibility="gone"
 			android:background="@drawable/style_edittext_gray_border">
 
 			<ImageView
@@ -119,8 +121,7 @@
 			android:gravity="right"
 			android:layout_centerVertical="true"
 			android:layout_alignParentRight="true"
-			android:layout_marginRight="16dp"
-			android:visibility="gone"/>
+			android:layout_marginRight="16dp" />
 
 		<View
 			android:layout_width="match_parent"
