--- a/app/src/main/res/layout/layout_activity_theme_item.xml
+++ b/app/src/main/res/layout/layout_activity_theme_item.xml
@@ -4,6 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
+    android:id="@+id/parent_view"
     android:background="@drawable/select_area_tab">
 
     <TextView
