--- a/app/src/main/res/layout/layout_fullimage_sub_item.xml
+++ b/app/src/main/res/layout/layout_fullimage_sub_item.xml
@@ -11,7 +11,7 @@
         android:layout_height="78dp"
         android:adjustViewBounds="true"
         android:layout_gravity="center"
-        android:src="@mipmap/ic_launcher"
+        android:src="@drawable/ic_launcher"
         app:riv_corner_radius="5dp"
         android:layout_marginLeft="5dp"
         android:scaleType="fitXY" />
