--- a/app/src/main/res/layout/dialog_fee.xml
+++ b/app/src/main/res/layout/dialog_fee.xml
@@ -66,18 +66,19 @@
             android:layout_above="@id/layout_btn"
             android:layout_below="@id/title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:fillViewport="true"
             android:layout_marginTop="20dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp"
             android:scrollbars="none"
             android:overScrollMode="never">
+
             <TextView
                 android:id="@+id/message"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:textSize="14dp"
