--- a/app/src/main/res/layout/layout_reservation_hotel.xml
+++ b/app/src/main/res/layout/layout_reservation_hotel.xml
@@ -65,6 +65,7 @@
                     android:layout_height="wrap_content"
                     android:textColor="@color/redtext"
                     android:textSize="12dp"
+                    android:textStyle="bold"
                     tools:text="48%↓"/>
 
                 <LinearLayout
@@ -79,6 +80,7 @@
                         android:layout_height="wrap_content"
                         android:textColor="@color/blacktxt"
                         android:textSize="16dp"
+                        android:textStyle="bold"
                         tools:text="205,700"/>
 
                     <TextView
