--- a/app/src/main/res/layout/activity_fullimage.xml
+++ b/app/src/main/res/layout/activity_fullimage.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:background="@color/blacktxt">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:orientation="vertical">-->
 
         <RelativeLayout
             android:id="@+id/toolbar"
@@ -52,93 +53,102 @@
                 android:layout_below="@id/tv_title_hotel" />
         </RelativeLayout>
 
+        <LinearLayout
+            android:id="@+id/layout_pager"
+            android:layout_width="match_parent"
+            android:layout_height="262dp"
+            android:layout_below="@id/toolbar"
+            android:layout_marginTop="72dp">
+            <android.support.v4.view.ViewPager
+                android:id="@+id/pager"
+                android:layout_width="match_parent"
+                android:layout_height="262dp" />
+        </LinearLayout>
         <!-- Top Sliding Banners -->
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/full_item_bg">
+            android:layout_marginBottom="30dp"
+            android:layout_below="@+id/layout_pager">
 
             <RelativeLayout
                 android:id="@+id/layout_info"
                 android:layout_width="match_parent"
-                android:layout_height="238dp"
-                android:gravity="center_vertical"
-                android:layout_alignParentBottom="true"
-                android:background="@color/full_item_bg">
+                android:layout_height="78dp"
+                android:gravity="center_vertical|bottom"
+                android:layout_alignParentBottom="true">
 
                 <HorizontalScrollView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fillViewport="true"
-                    android:layout_alignParentBottom="true"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_marginBottom="30dp"
                     android:overScrollMode="never">
 
                     <LinearLayout
                         android:id="@+id/ll_image_list"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:gravity="bottom"
                         android:layout_gravity="bottom"
                         android:orientation="horizontal"></LinearLayout>
 
                 </HorizontalScrollView>
             </RelativeLayout>
 
-            <TextView
-                android:id="@+id/img_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="12dp"
-                android:maxWidth="300dp"
-                android:layout_marginLeft="20dp"
-                android:padding="5dp"
-                android:singleLine="true"
-                android:ellipsize="end"
-                android:textColor="@color/white7"
-                android:layout_above="@+id/img_title2"
-                tools:text="외관사진" />
 
-            <TextView
-                android:id="@+id/img_title2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="10dp"
-                android:layout_marginLeft="20dp"
-                android:padding="5dp"
-                android:ellipsize="end"
-                android:layout_above="@+id/layout_info"
-                android:maxLines="2"
-                android:textColor="@color/white7"
-                tools:text="외관사진" />
-
-            <TextView
-                android:id="@+id/page"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAlignment="center"
-                android:layout_alignParentRight="true"
-                android:textColor="@color/white7"
-                android:layout_marginRight="20dp"
-                android:padding="5dp"
-                android:textSize="11dp"
-                android:layout_above="@+id/layout_info"
-                tools:text=" 3/10 + " />
-
-            <android.support.v4.view.ViewPager
-                android:id="@+id/pager"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginTop="70dp"
-                android:layout_marginBottom="20dp"
-                android:layout_above="@id/img_title" />
+                android:orientation="vertical"
+                android:layout_marginTop="20dp"
+                android:layout_above="@+id/layout_info">
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/img_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:textSize="12dp"
+                        android:maxWidth="300dp"
+                        android:layout_marginLeft="20dp"
+                        android:padding="5dp"
+                        android:singleLine="true"
+                        android:ellipsize="end"
+                        android:textColor="@color/white7"
+                        android:layout_toLeftOf="@+id/page"
+                        tools:text="외관사진" />
+
+                    <TextView
+                        android:id="@+id/page"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAlignment="center"
+                        android:layout_alignParentRight="true"
+                        android:textColor="@color/white7"
+                        android:layout_marginRight="20dp"
+                        android:padding="5dp"
+                        android:textSize="11dp"
+                        tools:text=" 3/10 + " />
+                </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/img_title2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="10dp"
+                    android:layout_marginLeft="20dp"
+                    android:padding="5dp"
+                    android:ellipsize="end"
+                    android:maxLines="2"
+                    android:textColor="@color/white7"
+                    tools:text="외관사진" />
+            </LinearLayout>
         </RelativeLayout>
-
-    </LinearLayout>
+    <!--</LinearLayout>-->
 
     <RelativeLayout
         android:id="@+id/wrapper"
