--- a/app/src/main/res/layout/layout_fullimage_item.xml
+++ b/app/src/main/res/layout/layout_fullimage_item.xml
@@ -7,5 +7,5 @@
         android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="262dp"
-        android:scaleType="fitXY" />
+        android:scaleType="centerCrop" />
 </LinearLayout>
