--- a/app/src/main/res/layout/layout_fullimage_sub_item.xml
+++ b/app/src/main/res/layout/layout_fullimage_sub_item.xml
@@ -2,17 +2,15 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="1dip">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.makeramen.roundedimageview.RoundedImageView
         android:id="@+id/image"
         android:layout_width="122dp"
         android:layout_height="78dp"
-        android:adjustViewBounds="true"
         android:layout_gravity="center"
         android:src="@drawable/ic_launcher"
         app:riv_corner_radius="2dp"
         android:layout_marginLeft="5dp"
-        android:scaleType="fitXY" />
+        android:scaleType="centerCrop" />
 </LinearLayout>
